src/objects/EU_001_Compromiso__c.object
<CustomObject>
    <description>Compromisos Experiencia Única</description>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Compromiso EU</relationshipLabel>
        <relationshipName>Compromiso_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EU001_Fm_Cambio_Fecha__c</fullName>
        <description>Alerta para cambio de fecha</description>
        <formula>IF( EU001_ca_Bandera_Fecha__c  = True, IMAGE(&quot;https://maxbbvabancomer--maxdevexp--c.cs25.visual.force.com/resource/1505298677000/EU001_warning&quot;,&quot;Amarillo&quot;,30, 30 ) , &apos;&apos;)</formula>
        <label>Cambio Fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_fm_CR__c</fullName>
        <description>Fórmula que obtiene el número de oficina del propietario del registro.</description>
        <formula>Owner:User.CR__c</formula>
        <label>CR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Divisa__c</fullName>
        <description>Divisa Experiencia única</description>
        <formula>TEXT(  EU_001_Rb_Oportunidad__r.CR_SEL_Moneda__c  )</formula>
        <label>Divisa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Etapa__c</fullName>
        <description>Etapa de la oportunidad Experiencia Única</description>
        <formula>TEXT(EU_001_Rb_Oportunidad__r.StageName)</formula>
        <label>Etapa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_Fm_Fecha_actual__c</fullName>
        <description>Fecha actual</description>
        <formula>EU_fm_Fecha_Cierre__c  &lt;  TODAY()</formula>
        <label>Compara Fecha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Fija_Tasa_Cobrada__c</fullName>
        <description>Tasa Fija Experiencia Única</description>
        <formula>EU_001_Rb_Oportunidad__r.CR_NU_TasaCobrada1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Fija) Tasa Cobrada (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EU001_Fm_Grupo__c</fullName>
        <description>Fórmula que obtiene el número de cliente del grupo relacionado a la oportunidad del compromiso.</description>
        <formula>EU_001_Rb_Oportunidad__r.Grupo__r.No_de_cliente__c</formula>
        <label>Grupo del cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_fm_Mismo_CR__c</fullName>
        <description>Fórmula que indica si el CR del propietario del registro es igual al CR del usuario actual.</description>
        <formula>$User.CR__c  =  EU001_fm_CR__c</formula>
        <label>Mismo CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU001_Fm_Monto_Promedio__c</fullName>
        <description>Monto Promedio de la Oportunidad</description>
        <formula>EU_001_Rb_Oportunidad__r.Monto_Promedio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monto Promedio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Motivo_descarte__c</fullName>
        <description>Motivo de descarte Experiencia única asociado a la oportunidad</description>
        <formula>TEXT(EU_001_Rb_Oportunidad__r.HI_ls_MotivoDescarte__c)</formula>
        <label>Motivo descarte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_fm_Perfil_DO__c</fullName>
        <description>Fórmula que indica si el perfil del usuario actual es alguno de los siguientes perfiles: DIR. OF. EMPRESAS, DIR. OF. GOB., D CORPORATIVO GOBIER, D CORPORATIVO EMPRES, Administrador del sistema, DWP Delegados o Administrador Delegado.</description>
        <formula>OR( $Profile.Name = &quot;Director de oficina&quot;,
$Profile.Name = &quot;DIR. OF. EMPRESAS&quot;,
$Profile.Name = &quot;DIR. OF. GOB.&quot;,
$Profile.Name = &quot;D CORPORATIVO GOBIER&quot;,
$Profile.Name = &quot;D CORPORATIVO EMPRES&quot;,
$Profile.Name =  &quot;Administrador del sistema&quot;,
$Profile.Name =  &quot;DWP Delegados&quot;,
$Profile.Name = &quot;Administrador Delegado&quot;
)</formula>
        <label>Perfil DO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Plazo__c</fullName>
        <description>Plazo Experiencia Única</description>
        <formula>TEXT(   EU_001_Rb_Oportunidad__r.CR_SEL_Plazo__c  )</formula>
        <label>Plazo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Reservas_Iniciales__c</fullName>
        <formula>Cliente__r.EU_001_un_Reservas_Iniciales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservas Iniciales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_CA_001_Resto_del_mes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Resto del mes Experiencia Única</description>
        <label>Resto del mes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Saldo_promedio__c</fullName>
        <description>Saldo promedio de Cuentas de Cheques MN Experiencia Unica</description>
        <formula>EU_001_Rb_Oportunidad__r.Saldo_promedio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo promedio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Saneamiento_del_Cliente__c</fullName>
        <formula>Cliente__r.Saneamiento_del_cliente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saneamiento del Cliente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Tipo_credito__c</fullName>
        <description>Experiencia única Tipo de crédito referente al Producto asociado a la oportunidad</description>
        <formula>TEXT(EU_001_Rb_Oportunidad__r.Tipo_Producto__c)</formula>
        <label>Tipo de crédito</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_ls_Tipo_operacion__c</fullName>
        <description>Lista de seleccion para tipo de operación experiencia única</description>
        <label>Tipo de operación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Línea existente</fullName>
                </value>
                <value>
                    <fullName>Nueva operación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Tipo_de_oportunidad__c</fullName>
        <description>Tipo de oportunidad Experiencia Única</description>
        <formula>TEXT(EU_001_Rb_Oportunidad__r.Tipo_de_Oportunidad__c)</formula>
        <label>Tipo de oportunidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_Fm_Tipo_Registro__c</fullName>
        <description>Tipo de Registro de la Oportunidad</description>
        <formula>TEXT(EU_001_Rb_Oportunidad__r.Tipo_de_Registro_Manual2__c)</formula>
        <label>Tipo Registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Tipo_de_Tasa__c</fullName>
        <description>Tipo de tasa Experiencia única</description>
        <formula>TEXT( EU_001_Rb_Oportunidad__r.CR_SEL_TipoTasa__c )</formula>
        <label>Tipo de tasa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Variable_Tasa_Cobrada_Pbs__c</fullName>
        <description>Tasa Cobrada (Pbs) Experiencia Única</description>
        <formula>EU_001_Rb_Oportunidad__r.Spread_Cliente__c/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Variable ) Tasa Cobrada (Pbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EU_001_tx_Destino__c</fullName>
        <description>Descripción corta destino</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Destino</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_Un_nivelPriorizacion__c</fullName>
        <description>Nivel al que corresponde la priorización del compromio</description>
        <label>Nivel Priorización</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU001_ca_priorizado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bandera de priorización de compromiso</description>
        <label>Priorizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU001_tl_comentariosDO__c</fullName>
        <description>Comentarios del DO sobre el compromiso</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comentarios del director, relacionados con el compromiso</inlineHelpText>
        <label>Comentarios DO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EU001_tl_comentariosEC__c</fullName>
        <description>Comentarios del ejecutivo</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comentarios del ejecutivo relacionados al compromiso</inlineHelpText>
        <label>Comentarios EC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Fecha_cierre__c</fullName>
        <description>Fecha de cierre Experiencia única</description>
        <formula>EU_001_Rb_Oportunidad__r.CloseDate</formula>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Impacto__c</fullName>
        <description>Calculo del impacto en saldo medio para Compromiso</description>
        <formula>IF(CONTAINS(&apos;Cartera Vigente CP:Cartera Vigente LP:Inversiones:Vista MN:Vista MN:Resto Captación&apos;, TEXT(EU_001_ls_Indicadores_de_cartera__c)) &amp;&amp; (ISPICKVAL(EU_001_ls_Estatus__c , &apos;Abierto&apos;) || ISPICKVAL(EU_001_ls_Estatus__c , &apos;Reprogramado&apos;))&amp;&amp; EU_fm_Fecha_Cierre__c &gt;= Today(), 
((EU_001_dv_Compromiso__c*EU_001_Fm_exito__c*EU_fm_dias__c)/Day(DATE(YEAR(Today()),IF(MONTH(TODAY()) = 12, 1,MONTH(TODAY()) + 1),1)-1))/1000, 
IF(CONTAINS(&apos;INF No Recurrentes:Margen Bruto:INF Recurrentes:Saneamiento:Usuario Nvo de Credito&apos;, TEXT(EU_001_ls_Indicadores_de_cartera__c)) &amp;&amp; (ISPICKVAL(EU_001_ls_Estatus__c , &apos;Abierto&apos;) || ISPICKVAL(EU_001_ls_Estatus__c , &apos;Reprogramado&apos;)) &amp;&amp; EU_fm_Fecha_Cierre__c &gt;= Today(), 
(EU_001_dv_Compromiso__c*EU_001_Fm_exito__c)/1000,
IF(CONTAINS(&apos;Stock Nomina&apos;, TEXT(EU_001_ls_Indicadores_de_cartera__c)) &amp;&amp; (ISPICKVAL(EU_001_ls_Estatus__c , &apos;Abierto&apos;) || ISPICKVAL(EU_001_ls_Estatus__c , &apos;Reprogramado&apos;)) &amp;&amp; EU_fm_Fecha_Cierre__c &gt;= Today(), 
(EU_001_dv_Compromiso__c*EU_001_Fm_exito__c),0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impacto</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_001_Rb_Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación a Oportunidad Experiencia única</description>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Compromiso EU</relationshipLabel>
        <relationshipName>Compromiso_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EU_001_Rb_Revisi_n_Individual_RI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Revisión Individual (RI)</description>
        <label>Reunión Individual</label>
        <referenceTo>EU001_RI__c</referenceTo>
        <relationshipLabel>Compromiso EU</relationshipLabel>
        <relationshipName>Compromiso_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EU_001_dv_Compromiso__c</fullName>
        <description>Monto en pesos para el compromiso de Experiencia única</description>
        <inlineHelpText>Pesos</inlineHelpText>
        <label>Compromiso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_001_ls_Estatus__c</fullName>
        <description>Estatus para identificar el compromiso Experiencia única</description>
        <label>Estatus del Compromiso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abierto</fullName>
                    <default>true</default>
                    <label>Abierto</label>
                </value>
                <value>
                    <fullName>Descartado</fullName>
                </value>
                <value>
                    <fullName>En Gestion</fullName>
                    <label>En Gestión</label>
                </value>
                <value>
                    <fullName>Hecho</fullName>
                </value>
                <value>
                    <fullName>Reprogramado</fullName>
                </value>
                <value>
                    <fullName>Vencido</fullName>
                </value>
                <value>
                    <fullName>Cambiar Fecha de disposición</fullName>
                    <isActive>false</isActive>
                    <label>Cambiar Fecha de disposición</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU_001_ls_Indicadores_de_cartera__c</fullName>
        <description>Listado indicadores de cartera para experiencia única</description>
        <label>Tipo de compromiso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cartera Vigente CP</fullName>
                </value>
                <value>
                    <fullName>Cartera Vigente LP</fullName>
                </value>
                <value>
                    <fullName>Cartera Vigente</fullName>
                </value>
                <value>
                    <fullName>Vista MN</fullName>
                </value>
                <value>
                    <fullName>Inversiones</fullName>
                </value>
                <value>
                    <fullName>Resto Captación</fullName>
                </value>
                <value>
                    <fullName>INF Recurrentes</fullName>
                </value>
                <value>
                    <fullName>Stock Nomina</fullName>
                </value>
                <value>
                    <fullName>Usuarios nuevos crédito</fullName>
                </value>
                <value>
                    <fullName>Saneamiento</fullName>
                </value>
                <value>
                    <fullName>Usuario Nvo de Credito</fullName>
                </value>
                <value>
                    <fullName>INF No Recurrentes</fullName>
                </value>
                <value>
                    <fullName>Margen Bruto</fullName>
                </value>
                <value>
                    <fullName>Análisis de crédito</fullName>
                </value>
                <value>
                    <fullName>IReNe</fullName>
                </value>
                <value>
                    <fullName>Plan de Cuenta</fullName>
                </value>
                <value>
                    <fullName>Visitas</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Captación</fullName>
                </value>
                <value>
                    <fullName>Colocación</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU_001_tx_Compromiso__c</fullName>
        <description>Descripción del compromiso</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describa el compromiso</inlineHelpText>
        <label>Compromiso</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EU_fm_Fecha_Cierre__c</fullName>
        <description>Fecha de cierre Experiencia única</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_EU_Avance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compromiso Actividad/Cierre</description>
        <inlineHelpText>Seleccionado: Actividad,
No seleccionado: Cierre</inlineHelpText>
        <label>Actividad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_EU_TipoPriorizacion__c</fullName>
        <description>Determina quien priorizó basandose en el campo: nivel de priorización</description>
        <formula>CASE( EU001_Un_nivelPriorizacion__c ,1, &apos;DO&apos; ,2, &apos;DR&apos; ,3, &apos;DD&apos; ,&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Priorización</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_Fm_Historico_Cambios_Fecha_Cierre__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Almacena el historico de los cambios de la fecha de cierre del compromiso.</description>
        <label>Historico Cambios Fecha Cierre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Cliente__c</fullName>
        <description>Nombre comercial del cliente Experiencia única</description>
        <formula>EU_001_Rb_Oportunidad__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_Monto__c</fullName>
        <description>Experiencia única Monto del crédito o línea (Pesos)</description>
        <formula>EU_001_Rb_Oportunidad__r.op_amountPivote_dv__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monto del crédito o línea</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_001_Fm_exito__c</fullName>
        <description>Permite identificar el porcentaje de compromiso Experiencia única</description>
        <formula>EU_001_Rb_Oportunidad__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% de Exito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EU_fm_dias__c</fullName>
        <formula>IF(MONTH(Today()) = MONTH( EU_fm_Fecha_Cierre__c ) 
&amp;&amp; EU_fm_Fecha_Cierre__c &gt;= Today() 
&amp;&amp; (ISPICKVAL(EU_001_ls_Estatus__c , &apos;Abierto&apos;) 
|| ISPICKVAL(EU_001_ls_Estatus__c , &apos;Reprogramado&apos;)), 
DAY(DATE( YEAR(TODAY()),IF(MONTH(TODAY()) = 12, 1,MONTH(TODAY()) + 1) , 1)- 1) -DAY( EU_fm_Fecha_Cierre__c )+1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU001_Fm_Producto__c</fullName>
        <description>Nombre del producto asociado a la oportunidad</description>
        <formula>if(EU_001_Rb_Oportunidad__r.Producto_BEyG__r.Name != null,EU_001_Rb_Oportunidad__r.Producto_BEyG__r.Name,if(ISPICKVAL(EU_001_Rb_Oportunidad__r.Tipo_Producto__c,&apos;&apos;),&apos;&apos; ,TEXT(EU_001_Rb_Oportunidad__r.Tipo_Producto__c)))</formula>
        <label>Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hecho_Descartado__c</fullName>
        <description>Campo fórmula para mostrar icono Hecho / Descartado Experiencia única</description>
        <formula>IF(ISPICKVAL(EU_001_ls_Estatus__c,&apos;Abierto&apos;),IMAGE(&quot;/resource/EU001_pendiente?isdtp=p1&quot;,&quot;Rojo&quot;,30,30),IF(ISPICKVAL(EU_001_ls_Estatus__c,&apos;Hecho&apos;),IMAGE(&quot;/resource/EU001_hecho?isdtp=p1&quot;,&quot;Blanco&quot;,30,30),IF(ISPICKVAL(EU_001_ls_Estatus__c, &apos;Descartado&apos;),IMAGE(&quot;/resource/	EU001_descartado?isdtp=p1&quot;,&quot;Blanco&quot;,30, 30 ),&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hecho / Descartado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU001_ca_Bandera_Fecha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bandera para identificar el cambio de fecha.</description>
        <label>Bandera Fecha</label>
        <type>Checkbox</type>
    </fields>
    <label>Compromiso EU</label>
    <nameField>
        <displayFormat>EUCP-{0000}</displayFormat>
        <label>Compromiso EU</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compromiso EU</pluralLabel>
    <recordTypes>
        <fullName>MX_BPP_Com_Captacion</fullName>
        <active>true</active>
        <label>BPyP Captación</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_BPP_CompColocacion</fullName>
        <active>true</active>
        <label>BPYP Colocación</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_BPP_Seguros</fullName>
        <active>true</active>
        <label>BPYP Seguros</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_BPP_Servicios</fullName>
        <active>true</active>
        <label>BPYP Servicios</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>